--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bls2brs"
 version = "0.3.0"
-authors = ["ns <portification@gmail.com>"]
+authors = ["ns <ns@brickadia.com>"]
 edition = "2018"
 
 [dependencies]
